<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Registration">

    <androidx.cardview.widget.CardView
        android:id="@+id/reg_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/registration_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/strRegistration"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tl_fName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:hint="@string/strFname"
                        app:boxStrokeColor="@color/colorPrimaryText"
                        app:boxStrokeErrorColor="?attr/colorError"
                        app:errorTextColor="?attr/colorError"
                        app:startIconDrawable="@drawable/profile_icon"
                        app:startIconTint="@color/colorPrimaryText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_fName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tl_lName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:hint="@string/strLname"
                        app:boxStrokeColor="@color/colorPrimaryText"
                        app:startIconDrawable="@drawable/profile_icon"
                        app:startIconTint="@color/colorPrimaryText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_lName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/strEmail"
                    app:boxStrokeColor="@color/colorPrimaryText"
                    app:startIconDrawable="@drawable/email_icon"
                    app:startIconTint="@color/colorPrimaryText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/strPassword"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorPrimaryText"
                    app:startIconDrawable="@drawable/password_drawable"
                    app:startIconTint="@color/colorPrimaryText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sw_branch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textOn="IT"
                        android:textOff="CE"
                        android:text="@string/strbranch" />

                    <RadioGroup
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/strMale" />

                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/strFemale" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/city_dropdown"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:boxStrokeColor="@color/colorPrimaryText"
                        app:endIconMode="dropdown_menu"
                        app:endIconTint="@color/colorPrimaryText">

                        <AutoCompleteTextView
                            android:id="@+id/dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:dropDownHeight="300dp"
                            android:hint="@string/strCity"
                            android:text="Select City"
                            android:inputType="none"
                            android:textColor="@color/colorPrimaryText" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/cb_pStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/strStatus" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:text="@string/strRegister"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:backgroundTint="@color/colorPrimary"
                    app:elevation="2dp"
                    app:rippleColor="?attr/colorOnPrimary" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>