<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/strLogin"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/strEmail"
                    app:boxStrokeColor="@color/colorPrimaryText"
                    app:startIconDrawable="@drawable/email_icon"
                    app:startIconTint="@color/colorPrimaryText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/strPassword"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorPrimaryText"
                    app:startIconDrawable="@drawable/password_drawable"
                    app:startIconTint="@color/colorPrimaryText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:text="@string/strForgot_Password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    app:backgroundTint="@color/colorPrimary"
                    app:elevation="2dp"
                    android:text="@string/strLogin"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/regLink_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="Don't Have Account? Sign Up"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>